<resources>
    <string name="app_name">Moovi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">fragment 1</string>
    <string name="film_poster" />
    <string name="star">Star</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="let_s_relax_and_watch_a_movie">Let\'s relax and watch a movie</string>
    <string name="welcome_back">Welcome back</string>
    <string name="user_profile">user profile</string>
    <string name="user_profile_picture">user_profile_picture</string>
    <string name="view_all">View all</string>
    <string name="category">Category</string>
    <string name="textview">TextView</string>
    <string name="detail_back_btn">detail_back_btn</string>
    <string name="bookmark_btn">bookmark_btn</string>
    <string name="play_back_btn" />
    <string name="head_title">Chào mừng bạn đến với ứng dụng Moviee !</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_register">Đăng ký</string>
    <string name="login_title">Đăng nhập vào ứng dụng</string>
    <string name="login_sub_title">
        <font color="#EF6C00"><b>Đăng nhập </b></font> nếu bạn đã có tài khoản.
    </string>
    <string name="login_email">Nhập tên tài khoản của bạn</string>
    <string name="title_password">Nhập mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="btn_login_form">Đăng nhập</string>
    <string name="have_not_account">
        Bạn không có tài khoản? <font color="#EF6C00"><b>Đăng kí</b></font>
    </string>
    <string name="register_title">Đăng ký tài khoản</string>
    <string name="register_sub_title">
        <font color="#EF6C00"><b>Đăng ký</b></font> để có thể sử dụng ứng dụng.
    </string>
    <string name="register_full_name">Họ và tên</string>
    <string name="register_email">Email</string>
    <string name="register_account">Tên tài khoản</string>
    <string name="register_password">Nhập mật khẩu</string>
    <string name="register_confirm_password">Xác nhận mật khẩu</string>
    <string name="btn_register_form">Đăng ký</string>
    <string name="have_account">
        Bạn đã có tài khoản? <font color="#EF6C00"><b>Đăng nhập</b></font>
    </string>
</resources>